fix: overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
   font-family: Roboto, sans-serif;
   color: variables.$textColor;
   list-style: none;
+  overflow-x: hidden;
 }
 
 .container {
